--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
+  "ava": {
+    "require": [
+      "babel-register"
+    ]
+  },
   "name": "warewolf",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ava": "^1.0.0-beta.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0"
+  }
 }
