--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-	"presets": [
-		["env", {
-      "targets": {
-        "node": "current"
-      }
-    }]
-  ]
+	"plugins": ["transform-es2015-modules-commonjs"]
 }
