--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
       "babel-register"
     ]
   },
-  "name": "warewolf",
+  "name": "werewolf",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ava": "^1.0.0-beta.1",
+    "ava": "^1.0.0-beta.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0"
